--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,23 @@
+2019-10-31  Enrico Schumann  <es@enricoschumann.net>
+
+	* DESCRIPTION: Version: 0.1-0
+
+        * R/icalutils.R (read_vevent): new argument
+	'use.OlsonNames'. If TRUE (the default),
+	timezones are looked up in the names retured by
+	OlsonNames(). The default may change in the
+	future, when timezone information provided by
+	the ical file is used.
+
 2019-10-28  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Package): rename package to
-	'icalutils'
+        * DESCRIPTION (Package): rename package to
+        'icalutils'
 
         * R/ical_utils.R (read_vevent): add (limited)
         support for yearly and weekly recurring events
         (read_vevent): add arguments 'recur.expand',
         'recur.until' and 'recur.count'
-
 
 2019-10-26  Enrico Schumann  <es@enricoschumann.net>
 
