--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-11-02  Enrico Schumann  <es@enricoschumann.net>
+
+	* NAMESPACE: export '.parse_rrule', '.expand_rrule'
+
 2019-10-31  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION: Version: 0.1-0
