[read_vevent] Implement 'expansion' of recurring events
Eexpand recurrence rule of event and create copies of
event at those timestamps.   Works only for the case of
return.class = "data.frame".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2019-11-03  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/icalutils.R (read_vevent): implement
+	'expansion' of recurring events: expand
+	recurrence rule of event and create copies of
+	event at those timestamps
+
 2019-11-02  Enrico Schumann  <es@enricoschumann.net>
 
 	* NAMESPACE: export '.parse_rrule', '.expand_rrule'
