--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-12-06  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (read_vevent): add argument 'uid.names'
+
 2019-12-05  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (read_vevent): add
