--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
+2020-06-10  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (vevent): add function 'vevent'
+
 2020-06-04  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (read_icalendar): add function
         'read_icalendar'
         (read_icalendar): add print method for class
-        "icalutils_icalendar"
+        "icalendar"
 
 2019-12-10  Enrico Schumann  <es@enricoschumann.net>
 
