--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-06-17  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (as.data.frame): new argument
+        'components'; RRULEs are per default only
+        expanded for events, todos
+
 2020-06-10  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (vevent): add function 'vevent'
