--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+2020-06-18  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (.expand_rrule): refactor RRULE
+        computations; support more rules
+
 2020-06-17  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (as.data.frame): new argument
         'components'; RRULEs are per default only
         expanded for events, todos
-	(read_event,read_timezone): remove functions
+        (read_event,read_timezone): remove functions
 
 2020-06-10  Enrico Schumann  <es@enricoschumann.net>
 
