--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-06-10  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (print.vevent): add method
+	(.expand_properties): rewrite datetime handling
+
 2020-10-29  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (.properties): make the
