Add repository URL

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
-v0.2-0  (2020-10-31; not yet released)
+v0.2-0  (2022-??-??; not yet released)
+
+  o additional source repository at
+    https://git.sr.ht/~enricoschumann/icalutils
 
   o ....
 
