Support recycling of inputs for 'vevent'

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,14 @@
-v0.2-0  (2022-??-??; not yet released)
+v0.2-0  (2023-??-??; not yet released)
 
   o additional source repository at
     https://git.sr.ht/~enricoschumann/icalutils
+
+  o 'vevent' now recyles its arguments, allowing
+    invokations such as
+
+      vevent(dtstart = c(as.Date("2023-01-28"),
+                         as.Date("2023-02-04")),
+             summary = "Repeated event")
 
   o ....
 
