--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-12-21  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (as.data.frame.icalendar): only try to
+	expand recurrence rule, and continue on failure
+
 2023-02-14  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (vevent): add argument "location"
